<resources>
    <string name="app_name">MobileProgrammingProject</string>
    <string name="login_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_email">Continue with email</string>
    <string name="login_with_email">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_an_account">Create an account</string>
    <string name="email_address">Email address (must @eng.asu.edu.eg)</string>
    <string name="password">Password (8 characters at least)</string>
    <string name="moto">Order your favourite food now</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="create_new_account">Create new account</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="create_account">Create account</string>
    <string name="do_you_want_to_receive_offers_via_email">Do you want to receive offers via Email</string>
    <string name="resturant_name">Burger King</string>
    <string name="resturant_desc">Burgers, Fries, sandwiches</string>
    <string name="resturant_review_rate">4.0</string>
    <string name="resturant_delivery_time">60 mins</string>
    <string name="resturant_separation"> mins • </string>
    <string name="resturant_delivery_cost">EGP 27.36</string>
    <string name="resturant_header">All restaurants</string>
    <string name="food_desc">The ultimate mix of Chicken together with Mushrooms, Red Onions, Green Peppers, fresh Tomatoes, Olives and melting mozzarella cheese.</string>
    <string name="food_name">Chicken Superme</string>
    <string name="food_price">EGP 117.00</string>
    <string name="basket_total_price">EGP 0.0 </string>
    <string name="view_basket">View basket</string>
    <string name="element_number_of_element">0</string>
    <string name="available_food">Available Food</string>
    <string name="basket_quantity">1</string>
    <string name="checkout">Checkout</string>
    <string name="delivery_time_12_00pm">Delivery time 12:00PM</string>
    <string name="delivery_time_3_00pm">Delivery time 3:00PM</string>
    <string name="payment_summary">Payment summary</string>
    <string name="add_items">Add items</string>
    <string name="subtotal">Subtotal</string>
    <string name="subtotal_cost">EGP 117.00</string>
    <string name="delivery_fee">Delivery fee</string>
    <string name="delivery_fee_cost">EGP 20.00</string>
    <string name="total_amount">Total amount</string>
    <string name="total_amount_cost">EGP 137.00</string>
    <string name="profile">Profile</string>
    <string name="profile_name">Hazem Hany</string>
    <string name="profile__email">18P2696@eng.asu.edu.eg</string>
    <string name="profile_orders">Active orders</string>
    <string name="profile_history">Show order history</string>
    <string name="order_header">Order,12/9/2022, 3:00PM, Gate A</string>
    <string name="order_iteam_name">1x Chicken Superme</string>
    <string name="order_item_price">EGP 117.00</string>
    <string name="order_total_cost">EGP 234.00</string>
    <string name="order_state">Pending</string>
    <string name="history_state">Closed</string>
    <string name="order_history">Order history</string>
    <string name="delivery_name">Hello Hazem</string>
    <string name="delivery_email">18P2696@eng.asu.edu.eg</string>
    <string name="active_orders_to_deliver">Active orders to deliver</string>
    <string name="order_deliver_header">Order,12/9/2022, 3:00PM, Gate A</string>
    <string name="deliver">Deliver</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gate_a_delivery">Gate A delivery</string>
    <string name="gate_b_delivery">Gate B delivery</string>
    <string name="tracking_orders">Tracking orders</string>
    <string name="delivery_chnage_state">Take</string>
    <string name="toolbar_header">Wagba</string>
    <string name="title_activity_store">StoreActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="delivery_history">Delivery history</string>
    <string name="log_out">Log Out</string>
    <string name="gate_a">Gate A</string>
    <string name="_3_00_pm">3:00 PM</string>
    <string name="edit_profileprofile">edit Profileprofile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="submit_edit">Submit Edit</string>
    <string name="age">Age (14-100)</string>
</resources>