<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/FoodCard_ly"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="5dp"
    android:layout_marginVertical="10dp"
    >

    <ImageView
        android:id="@+id/restaurantImage_imv"
        android:layout_width="0dp"
        android:layout_height="84dp"
        android:layout_weight="2"
        android:background="@drawable/roundimage"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/burger_king" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="5dp"
        android:layout_weight="5"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/restaurantName_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:includeFontPadding="true"
            android:text="@string/resturant_name"
            android:textColor="@color/FullyBlack"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/restaurantDescription_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resturant_desc"
            android:textSize="10sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"

                android:layout_gravity="center"
                android:background="@drawable/roundimage"

                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_star" />

            <TextView
                android:id="@+id/restaurantStars_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/resturant_review_rate"
                android:textColor="@color/FullyBlack"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/deliveryTime_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/resturant_delivery_time"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/resturant_separation" />

            <TextView
                android:id="@+id/deliveryPrice_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:autoText="false"
                android:contextClickable="false"
                android:elegantTextHeight="false"
                android:freezesText="false"
                android:text="@string/resturant_delivery_cost"
                android:textStyle="italic" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>