<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingTop="50dp"
    >

    <LinearLayout
        android:id="@+id/login_head"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:paddingVertical="50dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/_92x192" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center|center_vertical"
            android:text="@string/moto"
            android:textColor="@color/mainColor"

            android:textSize="16sp"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_inputs"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

<!--        <Button-->
<!--            android:id="@+id/button2"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:background="@drawable/roundedbutton"-->
<!--            android:drawableLeft="@drawable/ic_google"-->
<!--            android:paddingHorizontal="10dp"-->

<!--            android:paddingVertical="2dp"-->
<!--            android:text="@string/login_with_google"-->
<!--            android:textAllCaps="false"-->
<!--            android:textColor="@android:color/black"-->
<!--            android:textSize="16sp" />-->

<!--        <Button-->
<!--            android:id="@+id/button3"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:drawableLeft="@drawable/ic_facebook"-->
<!--            android:paddingHorizontal="10dp"-->
<!--            android:background="@drawable/roundedbutton"-->

<!--            android:text="@string/continue_with_facebook"-->
<!--            android:textAllCaps="false"-->
<!--            android:textColor="@android:color/black"-->
<!--            android:textSize="16sp"-->
<!--            android:paddingVertical="2dp"-->
<!--            />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/continue_with_email"
                android:textColor="@color/mainColor"
                android:textSize="16sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/emailAddres_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                />

            <EditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_mail_trans"
                android:paddingHorizontal="10dp"
                android:background="@drawable/roundedbutton"

                android:text="@string/login_with_email"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:paddingVertical="2dp"

                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/forgetPassword_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:textColor="@color/mainColor"
                    android:text="@string/forgot_password" />

                <TextView
                    android:id="@+id/createAccount_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textColor="@color/mainColor"
                    android:text="@string/create_an_account" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>